feat: Add enrollment modification and beta tester modification views for instructor API v2
